--- a/scss/styleGroup/_colorStyle.scss
+++ b/scss/styleGroup/_colorStyle.scss
@@ -9,6 +9,10 @@ $main_Border_2: #dbdef4;
 
 //Table用底線
 $specailBorder: #3d4cce;
+
+//優惠申請邊框
+$saleBorder: #86b6fe;
+
 //Table
 $table_BG:#ffffff;
 $table_Th_Bg:#ffffff;
@@ -18,7 +22,7 @@ $table_Td_Border:#dbdef4;
 //主要文字色
 $main_Color:#333333;
 $main_Color2:#ffffff;
-$main_Color3:#666666;
+$main_Color3:#747474;
 $main_Color4:#3d4cce;
 $main_Color6: #4d4d4d;
 $main_Color7: #4a59ed;
@@ -109,6 +113,27 @@ $jumpWindow_titleBg:linear-gradient(135deg,#7c4dff,#887aff);
     border: none;
     background: transparent;
     color: #000;
+}
+
+//select
+@mixin select_Style {
+    border: solid 1px #dedede;
+    background: transparent;
+    text-align: left;
+    border-radius: 3px;
+    font-weight: bold;
+    font-size: 14px;
+    padding-left: 16px;
+    background-image: linear-gradient(45deg,transparent 50%,#3278ff 0),linear-gradient(135deg,#3278ff 50%,transparent 0);
+    background-position: calc(100% - 20px) calc(1em + 2px),calc(100% - 15px) calc(1em + 2px);
+    background-size: 5px 5px,5px 5px;
+    background-repeat: no-repeat;
+    appearance: none;
+
+    option {
+        background: #ffffff;
+        color: #000000;
+    }
 }
 
 //header上
@@ -211,22 +236,30 @@ $LV_Color:#ffffff;
     }
 }
 
-//存款教學
+//存款教學小按鈕
 @mixin smallBtn {
     border: solid 1px #cca172;
     color: #cca172;
+    background: none;
 }
-
-//昨天今天本周本月按鈕
+//查看活動小按鈕
+@mixin smallBtn2 {
+    color: #557bff;
+    border: solid 1px #557bff;
+    background: none;
+}
+//金色hover變成藍色底按鈕
 @mixin dateBtn {
     background: linear-gradient(#fff 40%,#f4f4f4);
     border: 1px solid #e8e8e8;
+    color: #333333;
     border-radius: 3px;
     text-align: center;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
+    text-decoration: none;
 
     &:hover,&:active,&.active {
         background: #0068ff;
